--- a/app/package.json
+++ b/app/package.json
@@ -18,6 +18,7 @@
     "@fullcalendar/vue3": "^6.1.17",
     "@supabase/supabase-js": "^2.49.4",
     "@tailwindcss/vite": "^4.1.4",
+    "event-utils": "^2.1.0",
     "pinia": "^3.0.1",
     "tailwindcss": "^4.1.4",
     "vue": "^3.5.13",
